--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
+    "mdb-react-ui-kit": "^4.1.0",
     "mongoose": "^6.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
