--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "mdb-react-ui-kit": "^4.1.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
