--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdb-react-ui-kit": "^4.1.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
+    "node": "^16.17.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.7.0",
