--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,6 @@
 MONGO_URI=mongodb+srv://JDPC:Dl5XDU8nBpq3wf6S@cluster0.xrsqr.mongodb.net/mern-milestone-2
 PORT=3000
+
+BUILD_PATH=./backend/client/build
+
+REACT_APP_SERVER_URL=http://localhost:5000/
